--- a/static/cv.css
+++ b/static/cv.css
@@ -89,7 +89,7 @@ img.middle-icon{
 
 img.big-icon{
     height: 80%;
-    float:left;
+    float:right;
     margin-right:10px;
     margin-left: 20px;
     margin-top: 20px;
