--- a/templates/cv.html
+++ b/templates/cv.html
@@ -8,7 +8,7 @@
 	<body>
 
 		<div id="header">
-			<img class="big-icon" src="static/qrcode.png"/>
+			
 			<div id="name-container">
 				<h1 class="white">谢嘉麒</h1>
 				<h3 class="white">架构师</h3>
@@ -19,16 +19,18 @@
 				<p class="white">微信: xjq_314</p>
 				<p class="white">邮件: xjq_314@qq.com</p>
 			</div>
+			<img class="big-icon" src="static/qrcode.png"/>
 		</div>
 
 		<div id="side-container">
 			<div id="skill-container">
-				<h2>技能树</h2>
+				<h2>技术领域</h2>
 				<p>Python, Linux, MySQL</p>
 				<p>SAP, ERP, SCM</p>
+				<p>海外工作经历，英文熟练听说</p>
 			</div>
 			<div id="certification-container">
-				<h2>认证</h2>
+				<h2>资格认证</h2>
 				<div id=cert-container">
 					<img class="small-icon" src="static/cisco.png"/>
 					<p>CCNA</p>
@@ -43,12 +45,12 @@
 				</div>
 			</div>
 			<div id="education-container">
-				<h2>教育</h2>
+				<h2>教育背景</h2>
 				<div id=cert-container">
 					<img class="small-icon" src="static/dut.png"/>
 					<p>大连理工大学</p>
 				</div>
-				<p>电子信息工程学院<br>工学学士</p>
+				<p>电子信息工程学院<br>集成电路设计与制造专业<br>工学学士</p>
 			</div>
 		</div>
 
@@ -62,25 +64,30 @@
 							<h2>SUSE</h2>
 						</div>
 						<p class="right">2018.06 ~ present</p>
-						<p class="left">Enterprise Solution Architect</p>
+						<p class="left">企业解决方案架构师</p>
 					</div>
 					<div id="company-project">
-						<p>project1</p>
-						<p>project2</p>
+						<ul>
+							<li>傲剑速度哦死哦叫阿就哦三等奖附件</li>
+							<li>考四级莱克斯的房间累计亏损龙卷风</li>
+						</ul>
+						
 					</div>
 				</div>
 				<div id="company">
 					<div id="company-header">
 						<div id="company-icon">
 							<img class="middle-icon" src="static/ericsson.png"/>
-							<h2>ERICSSON</h2>
+							<h2>ERICSSON Japan</h2>
 						</div>
-						<p class="right">2018.06 ~ present</p>
-						<p class="left">企业解决方案架构师</p>
+						<p class="right">2014.06 ~ 2018.06</p>
+						<p class="left">云解决方案架构师</p>
 					</div>
 					<div id="company-project">
-						<p>协助企业设计分布式系统</p>
-						<p>帮助企业上云</p>
+						<ul>
+							<li>协助企业设计分布式系统</li>
+							<li>帮助企业上云</li>
+						</ul>
 					</div>
 				</div>
 			</div>
