--- a/static/cv.css
+++ b/static/cv.css
@@ -24,7 +24,7 @@ p.white{
 #side-container{
     width:250px;
     height:900px;
-    background-color: rgb(183, 183, 184);
+    background-color: rgb(223, 223, 226);
     /*display: inline-block;*/
     float:left
 }
@@ -32,7 +32,7 @@ p.white{
 #main-container{
     width:505px;
     height:900px;
-    background-color: rgb(243, 237, 237);
+    background-color: rgb(255, 255, 255);
     /*display: inline-block;*/
     float:left
 }
@@ -65,6 +65,11 @@ p.white{
     margin-right:20px
 }
 
+#portfolio-container{
+    margin-left:20px;
+    margin-right:20px
+}
+
 #company-header{
     height:100px
 }
@@ -87,6 +92,13 @@ img.middle-icon{
     margin-right:10px
 }
 
+img.qr-icon{
+    width: 50px;
+    height: 50px;
+    float: right;
+    margin-right:20px
+}
+
 img.big-icon{
     height: 80%;
     float:right;
@@ -106,4 +118,8 @@ p.left{
 
 h3.left{
     float:left
+}
+
+h2.grey{
+    color:rgb(24, 107, 79);
 }
